--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -7,9 +7,13 @@
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "postinstall": "ngcc --properties es2015 es5 browser module main --first-only --create-ivy-entry-points"
   },
   "devDependencies": {
+    "@angular/cli": "^12.0.3",
+    "@angular/compiler-cli": "^12.0.3",
+    "@types/jasmine": "~3.6.0",
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@babel/plugin-transform-runtime": "^7.12.1",
@@ -40,9 +44,15 @@
   },
   "dependencies": {
     "@angular-architects/module-federation": "^12.1.1",
+    "@angular/animations": "^12.0.3",
     "@angular/common": "^12.0.3",
+    "@angular/compiler": "^12.0.3",
     "@angular/core": "^12.0.3",
+    "@angular/forms": "^12.0.3",
+    "@angular/platform-browser": "^12.0.3",
+    "@angular/platform-browser-dynamic": "^12.0.3",
     "@angular/router": "^12.0.3",
+    "zone.js": "~0.11.4",
     "@types/jest": "^26.0.16",
     "@types/systemjs": "^6.1.0",
     "@types/webpack-env": "^1.16.0",
